# agent2any

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: async_client.py  client.py  direct_usage.py
src/agent2any/: __init__.py  config.py  exceptions.py  main.py
src/agent2any/channels/: __init__.py  base.py  dependencies.py  dispatcher.py  models.py  registry.py  router.py
src/agent2any/channels/feishu/: __init__.py  channel.py  config.py  gateway.py  outbound.py
src/agent2any/chat/: __init__.py  dependencies.py  router.py  routing.py  schemas.py  service.py
src/agent2any/connections/: __init__.py  acp.py  base.py  claude.py  codex.py  factory.py  gemini.py
src/agent2any/drama/: __init__.py  dependencies.py  models.py  prompts.py  router.py  schemas.py  service.py
src/agent2any/triage/: __init__.py  prompts.py  service.py
tests/: test_api.py  test_channels.py
